public/assets/css/style.css
/* Global */

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    background-color: #0f1432;
    font-family: Mate, 'Times New Roman', Times, serif;
    color: #e7f7fe;
}

p {
    margin-bottom: 0.8rem;
}

ul {
    padding-left: 0;
}

a {
    color: #a6dff8;
    text-decoration: none;
}

.row {
    --bs-gutter-x: 0;
}


/* Header */

header {
    width: 100%;
    margin: 2.5rem 0 2rem 0;
}

h1 {
    margin: 0.8rem 0;
    padding: 1.2rem;
    font-family: 'Seaweed Script', 'Times New Roman', Times, serif;
    font-size: 4.2rem;
    /* font-style: italic; */
    text-align: center;
}

/* Navbar */

#nav-tabs {
    width: 80%;
    margin: auto;
    border-color: #dcf0f9;
}

#nav-tabs:hover {
    border-top: none;
    border-left: none;
    border-right: none;
}

/* .nav-item {
    background-color: #19214e;
} */

.nav-link {
    padding: 0.9rem 0;
    --bs-nav-link-color: #a6dff8;
    font-family: Cinzel, 'Times New Roman', Times, serif;
    font-size: 1.6rem;
    transition: color, background-color, border-bottom;
}

.nav-link:hover {
    background-color: #19214e;
    --bs-nav-tabs-link-hover-border-color: #19214e;
    --bs-nav-link-hover-color: #d6f1fd;
    border-bottom: #d6f1fd;
}

.active {
    --bs-nav-tabs-link-active-bg: #dcf0f9;
}

/* Dropdown in Navbar */

.my-dropdown {
    position: relative;
}

.my-dropdown .drop-button {
    background: none;
    font-family: inherit;
    margin: 0;
}

.my-dropdown:hover .drop-button a {
    color: #d6f1fd;
}

.active-drop, .active-drop:hover {
    background-color: #dcf0f9;
    color: #19214e;
    --bs-nav-tabs-link-hover-border-color: #dcf0f9;
    border-bottom: #dcf0f9;
}

.active-drop-link, .active-drop-link:hover {
    color: #19214e !important;
}

.active-drop-sublink {
    background-color: #dcf0f9;
    color: #19214e;
    --bs-nav-tabs-link-hover-border-color: #dcf0f9;
    border-top: 0;
    border-bottom: #dcf0f9;
}

.dropdown-content {
    display: none;
    position: absolute;
    top: 100%;
    width: 100%;
    border-top: 1px solid #19214e;
    background-color: #0f1432;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    list-style-type: none;
}

.dropdown-content a {
    display: block;
    padding: 0.9rem 0;
    text-decoration: none;
}

.my-dropdown:hover .dropdown-content {
    display: block;
}

.dropdown-content .nav-link {
    border-radius: 0;
    border-bottom: 0;
}

.active-drop-content {
    border-top: 1px solid #dcf0f9;
}


/* Panels */

.panel {
    /* margin: 0 0.6rem; */
    padding: 3.2rem;
    background-color: #19214e;
}

#sidebar {
    background-color: #0f1432;
}

.side-panel {
    margin-right: 3rem;
    padding: 3.2rem;
    background-color: #19214e;
}

/* Intro */

#intro-row {
    margin-bottom: 2%;
}

#welcome-heading {
    padding-bottom: 0.5rem;
    text-align: center;
}

.welcome-text {
    padding: 0 6vw;
}

/* Articles */

.post-title {
    font-size: 2.1rem;
}

.title-link {
    color: #e7f7fe;
}

.entry-date {
    margin: 0.7rem 0;
    font-size: 1.2rem;
    color: #abd0e1;
    font-style: italic;
}

.edit-date {
    font-size: 1rem;
}

.type {
    font-family: Cinzel, 'Times New Roman', Times, serif;
    font-size: 1.05rem;
    font-style: normal;
    text-transform: capitalize;
}

.content {
    margin: 1rem 0;
    font-size: 1.1rem;
    line-height: 1.8rem;
    letter-spacing: 0.6px;
}

.description {
    font-family: Merriweather, 'Times New Roman', Times, serif;
    font-size: 0.9rem;
    color: #8dd1f1;
    /* font-style: italic; */
    letter-spacing: 0.05rem;
}

.tags {
    margin-top: 1.2rem;
    font-size: 1.05rem;
    color: #abd0e1;
    font-style: italic;
    text-transform: lowercase;
    letter-spacing: 0.05rem;
}

.tbc-dots {
    letter-spacing: 0.25rem;
}

.read-more {
    text-align: center;
    text-decoration: underline;
    font-size: 1.05rem;
}

.read-more-link:hover {
    color: #fff;
}

.word-count-preview {
    float: right;
    font-size: 1.05rem;
    color: #abd0e1;
}

.word-count {
    text-align: right;
    font-size: 1.05rem;
    color: #abd0e1;
}

hr {
    margin: 2.2rem 0;
}

.short-separator {
    width: 15%;
    margin: auto;
}

/* Sidebar */

.sticky {
    position: sticky;
    top: 0;
}

.side-list {
    font-size: 1.2rem;
    list-style-type: none;
}


/* My Books Page */

#info-div {
    margin-bottom: 0.6rem;
}

.text {
    padding: 0 7vw;
}

.book-button-div {
    justify-content: center;
}

.books-button {
    width: 33%;
    padding: 1rem;
    background-color: #93c6db;
    border-radius: 0.375rem;
}

.books-button a {
    color: #19214e;
    font-size: 1.3rem;
    font-family: Cinzel, 'Times New Roman', Times, serif;
    font-weight: 500;
}

.books-button:hover {
    background-color: rgba(73, 127, 150, 0.9);
}

.books-button:hover a {
    color: #fff;
}

/* Bookshelves */

.bookshelf {
    margin-bottom: 3%;
}

.book-section-heading {
    margin-bottom: 1rem;
    padding-bottom: 0;
    text-align: center;
}

.med-separator {
    width: 60%;
    margin: auto;
}

#book-heading-separator {
    margin-bottom: 2%;
}

.series-title {
    padding: 0.5% 0;
    margin-bottom: 0.8rem;
    text-align: center;
    font-family: Cinzel, 'Times New Roman', Times, serif;
    background-color: rgba(73, 127, 150, 0.9);
}

#book-tile-1 {
    padding: 0 2% 0 0;
}

#book-tile-2 {
    padding: 0 1.5% 0 1%;
}

#book-tile-3 {
    padding: 0 1% 0 1.5%;
}

#book-tile-4 {
    padding: 0 0 0 2%;
}

.book-panel {
    display: inline-block;
    width: 100%;
    margin: auto;
    padding: 7%;
    /* background-color: #a6cdde; */
    background-color: #93c6db;
    color: #fff;
}

/* Book Details - My Books Page */

#cover-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#cover-container a {
    display: flex;
    width: 100%;
    height: 22vw;
}

.book-cover {
    width: 100%;
    object-fit: cover;
}

.book-title {
    text-align: center;
}

.book-title-link {
    color: #e7f7fe;
}


/* Book/Series Pages */

#book-div {
    margin-bottom: 0.6rem;
}

.title-and-series {
    margin: 1.25rem 0 1rem 0;
}

.series {
    margin: 0;
    color: #a6dff8;
    text-transform: uppercase;
}

.series-white {
    margin: 0;
    color: #fff;
    text-align: center;
    text-transform: uppercase;
}

#book-left-column {
    width: 40%;
}

.book-detail-column {
    margin: 2rem 4rem 0 4rem;
}

#book-right-column {
    width: 60%;
    padding: 0 4rem 0 0;
}

.book-cover-thumb {
    width: 60%;
}

.book-title-large {
    font-size: 3rem;
}

.synopsis {
    line-height: 1.8rem;
}

.story-details {
    font-size: 1.05rem;
    line-height: 1.5rem;
}

.book-details {
    color: #a6dff8;
    line-height: 1.5rem;
}

.stats {
    text-align: center;
}


/* About the Author */

.picture-panel {
    padding: 2rem;
    background-color: #19214e;
}

.portrait {
    width: 100%;
}


/* Stats */

#stats-heading {
    text-align: center;
}

#stats-right-column {
    text-align: right;
}


/* Pagination */

#pagination {
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.pagination-link {
    text-align: center;
    color: #a6dff8;
}

#prev {
    margin: 0.25rem 0.5rem 0.25rem 0;
    background: none;
}

#next {
    margin: 0.25rem 0 0.25rem 0.5rem;
    background: none;
}

button:hover {
    color: #fff;
}

button:disabled {
    color: #87a0ab;
}

#page-link-div {
    text-align: center;
    align-content: center;
}

.page-link {
    display: inline;
    border: 0;
    margin: 0 0.15rem;
    padding: 0.2rem 0.5rem;
    background: none;
    color: #a6dff8;
}

.page-link.active {
    border: 0;
    background-color: #dcf0f9;
    color: #0f1432;
}

.page-link:hover {
    background: none;
    color: #fff;
}

.page-link.active:hover {
    background-color: #dcf0f9;
    color: #0f1432;
}

.page-link:focus {
    --bs-pagination-focus-box-shadow: none;
}

.break {
    width: 100%;
}

#page-numbers {
    margin: 0 auto;
    margin: 0.25rem 0;
}


/* Back to Top */

#back-to-top {
    margin: 1.7rem 0 0 0;
    text-align: center;
    font-size: 1.2rem;
    font-style: italic;
}


/* Footer */

#footer-row {
    padding: 1.6rem 0;
}


/* Media Queries */

@media only screen and (max-width: 1440px) {
    .text {
        padding: 0 6vw;
    }
}

@media only screen and (max-width: 1025px) {
    #nav-tabs {
        width: 90%;
    }

    #cover-container a {
        height: 25vw;
    }

    .books-button {
        width: 38%;
    }
}

@media only screen and (max-width: 768px) {
    header {
        margin: 2rem 0 1.8rem 0;
    }

    h1 {
        margin: 0.5rem;
        padding: 0.8rem;
        font-size: 4rem;
    }

    #nav-tabs {
        width: 100%;
    }

    .nav-link {
        font-size: 1.5rem;
    }

    .panel {
        padding: 2.8rem;
    }

    .welcome-text {
        padding: 0;
    }

    .post-title {
        font-size: 1.9rem;
    }

    .entry-date {
        font-size: 1.15rem;
    }

    .edit-date {
        font-size: 0.95rem;
    }

    .type {
        font-size: 1rem;
    }

    .content {
        font-size: 1rem;
        line-height: 1.6rem;
    }

    .text {
        padding: 0;
    }

    .books-button {
        width: 48%;
    }

    .books-button a {
        font-size: 1.2rem;
    }

    #book-tile-1, #book-tile-3 {
        padding: 0 2% 0 0;
    }

    #book-tile-2, #book-tile-4 {
        padding: 0 0 2% 0;
    }

    #cover-container a {
        height: 50vw;
    }
}

@media only screen and (max-width: 426px) {
    header {
        margin: 1.8rem 0 1.5rem 0;
    }

    h1 {
        margin: 0rem;
        font-size: 3.8rem;
    }

    #nav-tabs {
        width: 70%;
    }

    .nav-link {
        font-size: 1.4rem;
    }

    .panel {
        padding: 2.2rem;
    }

    .post-title {
        font-size: 1.8rem;
    }

    .entry-date {
        font-size: 1.1rem;
    }

    .edit-date {
        font-size: 0.9rem;
    }

    .type {
        font-size: 1rem;
    }

    .content {
        font-size: 0.95rem;
        line-height: 1.5rem;
    }

    #info-div {
        margin-bottom: 0;
    }

    .books-button {
        width: 80%;
    }

    .books-button a {
        font-size: 1.1rem;
    }

    #book-tile-1, #book-tile-2, #book-tile-3, #book-tile-4 {
        padding: 2%;
    }

    #cover-container a {
        height: 90vw;
    }
}

